# mlir-out-of-tree-asan

./: .gitignore  CMakeLists.txt  README.md  run.sh
.docker/: Dockerfile  install_llvm.sh
include/myproject/Dialect/: CMakeLists.txt
include/myproject/Dialect/MyDialect/IR/: CMakeLists.txt  MyDialect.h  MyDialect.td  MyDialectTypes.td  Types.h
lib/Dialect/MyDialect/IR/: CMakeLists.txt  MyDialect.cpp  Types.cpp
test/: test.mlir
tool/: CMakeLists.txt
tool/my-opt/: CMakeLists.txt  my-opt.cpp
